Fixed all bugs and finished microservice stock with 6 hus